# oliv-recorder

./: .gitignore  Cargo.toml  README.md  min-version.json
.github/workflows/: build.yml  oliv_build.yml  release.yml
frontend/: package.json
frontend/public/: meeting-prompt.html  meeting-prompt.js
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: auth.rs  ingest.rs  lib.rs  main.rs  tray.rs
frontend/src-tauri/src/audio/: channel_writer.rs  cleanup.rs  echo_canceller.rs  incremental_saver.rs  mic_monitor.rs  mod.rs  permissions.rs  pipeline.rs  recording_commands.rs  recording_preferences.rs  recording_saver.rs  vad.rs
frontend/src-tauri/src/notifications/: commands.rs  types.rs
frontend/src/app/: layout.tsx  metadata.ts  metadata.tsx  page.tsx
frontend/src/components/: About.tsx  AnalyticsConsentSwitch.tsx  DeviceSelection.tsx  Info.tsx  LoginGate.tsx  Logo.tsx  MandatoryUpdateGate.tsx  MeetingDetectedPrompt.tsx  PermissionWarning.tsx  PreferenceSettings.tsx  RecordingControls.tsx  ResetHandler.tsx  TranscriptView.tsx  UpdateCheckProvider.tsx  UpdateDialog.tsx  VirtualizedTranscriptView.tsx
frontend/src/hooks/: useParakeetReadiness.ts  usePermissionCheck.ts  useRecordingStart.ts  useRecordingStop.ts  useUpdateCheck.ts
frontend/src/lib/: olivAuth.ts  recordingNotification.tsx
frontend/src/services/: recordingService.ts  updateService.ts
scripts/: reset-local-data.sh  uninstall.sh
tools/aec-replay/: Cargo.toml
tools/aec-replay/src/: main.rs
(+15 files in other folders)
